fix: kyverno update + policies

--- a/k8s/apps/kyverno/kyverno/app/helmrelease.yaml
+++ b/k8s/apps/kyverno/kyverno/app/helmrelease.yaml
@@ -27,53 +27,49 @@ spec:
     grafana:
       enabled: true
     admissionController:
-      replicas: 3
-      rbac:
-        clusterRole:
-          extraResources:
-            - apiGroups:
-                - ""
-              resources:
-                - pods
-              verbs:
-                - create
-                - update
-                - delete
-      topologySpreadConstraints:
-        - maxSkew: 1
-          topologyKey: kubernetes.io/hostname
-          whenUnsatisfiable: DoNotSchedule
-          labelSelector:
-            matchLabels:
-              app.kubernetes.io/instance: *app
-              app.kubernetes.io/component: admission-controller
+      clusterRole:
+        extraResources:
+          - apiGroups:
+              - '*'
+            resources:
+              - '*'
+            verbs:
+              - get
+              - list
+              - watch
       serviceMonitor:
         enabled: true
     backgroundController:
-      rbac:
-        clusterRole:
-          extraResources:
-            - apiGroups:
-                - ""
-              resources:
-                - pods
-              verbs:
-                - create
-                - update
-                - patch
-                - delete
-                - get
-                - list
+      clusterRole:
+        extraResources:
+          - apiGroups:
+              - '*'
+            resources:
+              - '*'
+            verbs:
+              - get
+              - list
+              - watch
       resources:
         requests:
-          cpu: 100m
+          cpu: 10m
         limits:
           memory: 1Gi
       serviceMonitor:
         enabled: true
-    cleanupController:
+    reportsController:
+      clusterRole:
+        extraResources:
+          - apiGroups:
+              - '*'
+            resources:
+              - '*'
+            verbs:
+              - get
+              - list
+              - watch
       serviceMonitor:
         enabled: true
-    reportsController:
+    cleanupController:
       serviceMonitor:
         enabled: true
