--- a/k8s/apps/kyverno/kyverno/policies/volsync-movers.yaml
+++ b/k8s/apps/kyverno/kyverno/policies/volsync-movers.yaml
@@ -4,18 +4,16 @@ kind: ClusterPolicy
 metadata:
   name: volsync-movers
   annotations:
-    policies.kyverno.io/title: Set custom config on the Volsync mover Jobs
-    policies.kyverno.io/description: |
-      This policy sets custom configuration on the Volsync mover Jobs.
+    policies.kyverno.io/title: Mutate Volsync mover jobs
     policies.kyverno.io/subject: Pod
 spec:
-  generateExistingOnPolicyUpdate: true
   rules:
-    - name: set-volsync-movers-custom-config
+    - name: mutate-volsync-src-movers
       match:
         any:
           - resources:
               kinds: ["batch/v1/Job"]
+              names: ["volsync-src-*"]
               namespaces: ["*"]
               selector:
                 matchLabels:
@@ -36,6 +34,7 @@ spec:
                 initContainers:
                   - name: jitter
                     image: docker.io/library/busybox:latest
+                    imagePullPolicy: IfNotPresent
                     command: ['sh', '-c', 'sleep $(shuf -i 0-60 -n 1)']
                 containers:
                   - name: restic
@@ -45,5 +44,30 @@ spec:
                 volumes:
                   - name: repository
                     nfs:
-                      server: nfs.internal
+                      server: expanse.internal
+                      path: /eros/Volsync
+    - name: mutate-volsync-dst-movers
+      match:
+        any:
+          - resources:
+              kinds: ["batch/v1/Job"]
+              names: ["volsync-dst-*"]
+              namespaces: ["*"]
+              selector:
+                matchLabels:
+                  app.kubernetes.io/created-by: volsync
+      mutate:
+        patchStrategicMerge:
+          spec:
+            template:
+              spec:
+                containers:
+                  - name: restic
+                    volumeMounts:
+                      - name: repository
+                        mountPath: /repository
+                volumes:
+                  - name: repository
+                    nfs:
+                      server: 192.168.68.10
                       path: /mnt/nfs/backups/
