--- a/k8s/apps/default/filebrowser/app/helmrelease.yaml
+++ b/k8s/apps/default/filebrowser/app/helmrelease.yaml
@@ -74,7 +74,7 @@ spec:
     persistence:
       config:
         existingClaim: filebrowser
-      eros:
+      data:
         type: nfs
         server: 192.168.68.10
         path: /mnt/nfs
