fix: flux webhook and add notifications

--- a/k8s/apps/flux-system/addons/app/webhooks/github/receiver.yaml
+++ b/k8s/apps/flux-system/addons/app/webhooks/github/receiver.yaml
@@ -1,7 +1,8 @@
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/notification.toolkit.fluxcd.io/receiver_v1.json
 apiVersion: notification.toolkit.fluxcd.io/v1
 kind: Receiver
 metadata:
-  name: github-receiver
+  name: homelab
 spec:
   type: github
   events:
