--- a/k8s/apps/default/komga/app/pvc.yaml
+++ b/k8s/apps/default/komga/app/pvc.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: audiobookshelf
+  name: komga
 spec:
   accessModes: ["ReadWriteMany"]
   resources:
     requests:
-      storage: 15Gi
+      storage: 1Gi
   storageClassName: ceph-filesystem
