--- a/k8s/apps/flux-system/addons/app/webhooks/github/ingress.yaml
+++ b/k8s/apps/flux-system/addons/app/webhooks/github/ingress.yaml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   name: webhook-receiver
   annotations:
-    external-dns.alpha.kubernetes.io/target: external.devbu.io
+    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
 spec:
   ingressClassName: external
   rules:
