feat: add emailer to ks

--- a/k8s/apps/default/kustomization.yaml
+++ b/k8s/apps/default/kustomization.yaml
@@ -20,4 +20,5 @@ resources:
   - ./jellyfin/ks.yaml
   - ./jellyseerr/ks.yaml
   - ./filebrowser/ks.yaml
+  - ./emailer/ks.yaml
   # - ./immich/ks.yaml
