--- a/k8s/apps/flux-system/addons/app/notifications/github/notification.yaml
+++ b/k8s/apps/flux-system/addons/app/notifications/github/notification.yaml
@@ -5,7 +5,7 @@ metadata:
   name: github
 spec:
   type: github
-  address: https://github.com/onedr0p/home-ops
+  address: https://github.com/solanyn/homelab
   secretRef:
     name: github-token-secret
 ---
