--- a/k8s/apps/default/emailer/app/externalsecret.yaml
+++ b/k8s/apps/default/emailer/app/externalsecret.yaml
@@ -19,6 +19,7 @@ spec:
         EMAILER_SMTP_PASSWORD: "{{ .SMTP_PASSWORD }}"
         EMAILER_EMAIL_ATTACHMENT_URL: "{{ .EMAIL_ATTACHMENT_URL }}"
         RUST_LOG: "info"
+        TZ: Australia/Sydney
   dataFrom:
     - extract:
         key: emailer
