--- a/k8s/apps/default/kustomization.yaml
+++ b/k8s/apps/default/kustomization.yaml
@@ -15,6 +15,7 @@ resources:
   - ./radarr/ks.yaml
   - ./sonarr/ks.yaml
   - ./readarr/ks.yaml
+  - ./whisparr/ks.yaml
   - ./komga/ks.yaml
   - ./stash/ks.yaml
   - ./jellyfin/ks.yaml
