--- a/k8s/apps/default/whisparr/app/externalsecret.yaml
+++ b/k8s/apps/default/whisparr/app/externalsecret.yaml
@@ -12,12 +12,12 @@ spec:
     template:
       engineVersion: v2
       data:
-        RADARR__AUTH__APIKEY: "{{ .WHISPARR_API_KEY }}"
-        RADARR__POSTGRES__HOST: &dbHost postgres16-rw.database.svc.cluster.local
-        RADARR__POSTGRES__PORT: "5432"
-        RADARR__POSTGRES__USER: &dbUser "{{ .WHISPARR_POSTGRES_USER }}"
-        RADARR__POSTGRES__PASSWORD: &dbPass "{{ .WHISPARR_POSTGRES_PASSWORD }}"
-        RADARR__POSTGRES__MAINDB: &dbName whisparr_main
+        WHISPARR__AUTH__APIKEY: "{{ .WHISPARR_API_KEY }}"
+        WHISPARR__POSTGRES__HOST: &dbHost postgres16-rw.database.svc.cluster.local
+        WHISPARR__POSTGRES__PORT: "5432"
+        WHISPARR__POSTGRES__USER: &dbUser "{{ .WHISPARR_POSTGRES_USER }}"
+        WHISPARR__POSTGRES__PASSWORD: &dbPass "{{ .WHISPARR_POSTGRES_PASSWORD }}"
+        WHISPARR__POSTGRES__MAINDB: &dbName whisparr_main
         INIT_POSTGRES_DBNAME: *dbName
         INIT_POSTGRES_HOST: *dbHost
         INIT_POSTGRES_USER: *dbUser
