fix: hotio containers want root on startup zzz

--- a/k8s/apps/default/whisparr/app/helmrelease.yaml
+++ b/k8s/apps/default/whisparr/app/helmrelease.yaml
@@ -53,12 +53,10 @@ spec:
               TZ: Australia/Sydney
             envFrom: *envFrom
             securityContext:
-              allowPrivilegeEscalation: false
+              allowPrivilegeEscalation: true
               readOnlyRootFilesystem: true
               capabilities: {drop: ["ALL"]}
             resources:
-              requests:
-                memory: 256Mi
               limits:
                 memory: 4Gi
     defaultPodOptions:
