fix: table name

--- a/k8s/apps/default/whisparr/app/helmrelease.yaml
+++ b/k8s/apps/default/whisparr/app/helmrelease.yaml
@@ -47,7 +47,7 @@ spec:
               - secretRef:
                   name: whisparr-secret
             env:
-              INIT_POSTGRES_DBNAME: whisparr_log
+              INIT_POSTGRES_DBNAME: whisparr-log
         containers:
           app:
             image:
