--- a/k8s/apps/external-secrets/namespace.yaml
+++ b/k8s/apps/external-secrets/namespace.yaml
@@ -2,8 +2,9 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: external-secrets
-  labels:
+  annotations:
     kustomize.toolkit.fluxcd.io/prune: disabled
+    volsync.backube/privileged-movers: "true"
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/notification.toolkit.fluxcd.io/provider_v1beta3.json
 apiVersion: notification.toolkit.fluxcd.io/v1beta3
