--- a/k8s/apps/database/valkey/app/helmrelease.yaml
+++ b/k8s/apps/database/valkey/app/helmrelease.yaml
@@ -7,8 +7,8 @@ spec:
   interval: 30m
   chart:
     spec:
-      chart: valkey
-      version: 2.0.0
+      chart: valkey-operator
+      version: v0.0.38-chart
       sourceRef:
         kind: HelmRepository
         name: valkey
