--- a/k8s/apps/database/redis/app/helmrelease.yaml
+++ b/k8s/apps/database/redis/app/helmrelease.yaml
@@ -2,13 +2,13 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: valkey
+  name: redis
 spec:
   interval: 30m
   chart:
     spec:
-      chart: valkey-operator
-      version: v0.0.38-chart
+      chart: redis
+      version: 3.3.0
       sourceRef:
         kind: HelmRepository
         name: valkey
@@ -21,6 +21,6 @@ spec:
     remediation:
       strategy: rollback
       retries: 3
-  dependsOn:
-    - name: openebs
-      namespace: openebs-system
+  values:
+    monitoring:
+      enabled: true
