--- a/k8s/apps/database/redis/app/helmrelease.yaml
+++ b/k8s/apps/database/redis/app/helmrelease.yaml
@@ -11,7 +11,7 @@ spec:
       version: 3.3.0
       sourceRef:
         kind: HelmRepository
-        name: valkey
+        name: redis
         namespace: flux-system
   install:
     remediation:
