--- a/k8s/apps/database/redis/app/helmrelease.yaml
+++ b/k8s/apps/database/redis/app/helmrelease.yaml
@@ -8,7 +8,7 @@ spec:
   chart:
     spec:
       chart: redis-operator
-      version: 3.3.0
+      version: 0.18.3
       sourceRef:
         kind: HelmRepository
         name: redis
@@ -22,5 +22,5 @@ spec:
       strategy: rollback
       retries: 3
   values:
-    monitoring:
-      enabled: true
+    resources: {}
+    issuer: {}
