feat: migrate to new domain

--- a/k8s/apps/cert-manager/cert-manager/issuers/issuers.yaml
+++ b/k8s/apps/cert-manager/cert-manager/issuers/issuers.yaml
@@ -17,7 +17,8 @@ spec:
               key: CLOUDFLARE_API_TOKEN
         selector:
           dnsZones:
-            - "${SECRET_DOMAIN}"
+            - "${SECRET_HOME_DOMAIN}"
+            - "${SECRET_DEV_DOMAIN}"
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cert-manager.io/clusterissuer_v1.json
 apiVersion: cert-manager.io/v1
@@ -38,4 +39,5 @@ spec:
               key: CLOUDFLARE_API_TOKEN
         selector:
           dnsZones:
-            - "${SECRET_DOMAIN}"
+            - "${SECRET_HOME_DOMAIN}"
+            - "${SECRET_DEV_DOMAIN}"
