--- a/k8s/apps/default/qbittorrent/app/helmrelease.yaml
+++ b/k8s/apps/default/qbittorrent/app/helmrelease.yaml
@@ -85,10 +85,10 @@ spec:
     ingress:
       app:
         annotations:
-          external-dns.alpha.kubernetes.io/target: "internal.${SECRET_DOMAIN}"
+          external-dns.alpha.kubernetes.io/target: "internal.${SECRET_HOME_DOMAIN}"
         className: internal
         hosts:
-          - host: "qb.${SECRET_DOMAIN}"
+          - host: "qb.${SECRET_HOME_DOMAIN}"
             paths:
               - path: /
                 service:
