--- a/k8s/flux/vars/externalsecret.yaml
+++ b/k8s/flux/vars/externalsecret.yaml
@@ -2,17 +2,20 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: "${SECRET_HOME_DOMAIN//./-}-tls"
+  name: cluster-secrets
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword-connect
   target:
-    name: "${SECRET_HOME_DOMAIN//./-}-tls"
+    name: cluster-secrets
     template:
       engineVersion: v2
-      type: kubernetes.io/tls
+      data:
+        SECRET_ACME_EMAIL: "{{ .ACME_EMAIL }}"
+        SECRET_HOME_DOMAIN: "{{ .HOME_DOMAIN }}"
+        SECRET_DEV_DOMAIN: "{{ .DEV_DOMAIN }}"
+        SECRET_CLOUDFLARE_TUNNEL_ID: "{{ .CLOUDFLARE_TUNNEL_ID }}"
   dataFrom:
     - extract:
-        key: "${SECRET_HOME_DOMAIN//./-}-tls"
-        decodingStrategy: Auto
+        key: cloudflare
