--- a/k8s/apps/cert-manager/certificates/export/pushsecret.yaml
+++ b/k8s/apps/cert-manager/certificates/export/pushsecret.yaml
@@ -2,7 +2,7 @@
 apiVersion: external-secrets.io/v1alpha1
 kind: PushSecret
 metadata:
-  name: "${SECRET_DOMAIN//./-}-tls"
+  name: "${SECRET_HOME_DOMAIN//./-}-tls"
 spec:
   updatePolicy: Replace # Policy to overwrite existing secrets in the provider on sync
   deletionPolicy: Delete # the provider' secret will be deleted if the PushSecret is deleted
@@ -12,7 +12,7 @@ spec:
       kind: ClusterSecretStore
   selector:
     secret:
-      name: "${SECRET_DOMAIN//./-}-tls"
+      name: "${SECRET_HOME_DOMAIN//./-}-tls"
   template:
     engineVersion: v2
     data:
@@ -22,10 +22,10 @@ spec:
     - match:
         secretKey: &key tls.crt
         remoteRef:
-          remoteKey: "${SECRET_DOMAIN//./-}-tls"
+          remoteKey: "${SECRET_HOME_DOMAIN//./-}-tls"
           property: *key
     - match:
         secretKey: &key tls.key
         remoteRef:
-          remoteKey: "${SECRET_DOMAIN//./-}-tls"
+          remoteKey: "${SECRET_HOME_DOMAIN//./-}-tls"
           property: *key
