--- a/k8s/apps/cert-manager/certificates/import/externalsecret.yaml
+++ b/k8s/apps/cert-manager/certificates/import/externalsecret.yaml
@@ -2,23 +2,23 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: "${SECRET_DOMAIN//./-}-tls"
+  name: "${SECRET_HOME_DOMAIN//./-}-tls"
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword-connect
   refreshInterval: "0"
   target:
-    name: "${SECRET_DOMAIN//./-}-tls"
+    name: "${SECRET_HOME_DOMAIN//./-}-tls"
     creationPolicy: Orphan
     template:
       engineVersion: v2
       type: kubernetes.io/tls
       metadata:
         annotations:
-          cert-manager.io/alt-names: "*.${SECRET_DOMAIN},${SECRET_DOMAIN}"
-          cert-manager.io/certificate-name: "${SECRET_DOMAIN//./-}"
-          cert-manager.io/common-name: "${SECRET_DOMAIN}"
+          cert-manager.io/alt-names: "*.${SECRET_HOME_DOMAIN},${SECRET_HOME_DOMAIN}"
+          cert-manager.io/certificate-name: "${SECRET_HOME_DOMAIN//./-}"
+          cert-manager.io/common-name: "${SECRET_HOME_DOMAIN}"
           cert-manager.io/ip-sans: ""
           cert-manager.io/issuer-group: ""
           cert-manager.io/issuer-kind: ClusterIssuer
@@ -28,5 +28,5 @@ spec:
           controller.cert-manager.io/fao: "true"
   dataFrom:
     - extract:
-        key: "${SECRET_DOMAIN//./-}-tls"
+        key: "${SECRET_HOME_DOMAIN//./-}-tls"
         decodingStrategy: Auto
