--- a/k8s/apps/database/cloudnative-pg/cluster/service.yaml
+++ b/k8s/apps/database/cloudnative-pg/cluster/service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: postgres-lb
   annotations:
-    external-dns.alpha.kubernetes.io/hostname: postgres.${SECRET_DOMAIN}
+    external-dns.alpha.kubernetes.io/hostname: postgres.${SECRET_HOME_DOMAIN}
     lbipam.cilium.io/ips: 192.168.68.125
 spec:
   type: LoadBalancer
