--- a/k8s/apps/default/komga/app/helmrelease.yaml
+++ b/k8s/apps/default/komga/app/helmrelease.yaml
@@ -46,10 +46,10 @@ spec:
     ingress:
       app:
         annotations:
-          external-dns.alpha.kubernetes.io/target: "internal.${SECRET_DOMAIN}"
+          external-dns.alpha.kubernetes.io/target: "internal.${SECRET_HOME_DOMAIN}"
         className: internal
         hosts:
-          - host: "books.${SECRET_DOMAIN}"
+          - host: "books.${SECRET_HOME_DOMAIN}"
             paths:
               - path: /
                 service:
