--- a/k8s/apps/flux-system/addons/app/webhooks/github/ingress.yaml
+++ b/k8s/apps/flux-system/addons/app/webhooks/github/ingress.yaml
@@ -3,11 +3,11 @@ kind: Ingress
 metadata:
   name: webhook-receiver
   annotations:
-    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
+    external-dns.alpha.kubernetes.io/target: "external.${SECRET_HOME_DOMAIN}"
 spec:
   ingressClassName: external
   rules:
-    - host: 'flux-webhook.${SECRET_DOMAIN}'
+    - host: 'flux-webhook.${SECRET_HOME_DOMAIN}'
       http:
         paths:
           - path: /hook/
