--- a/k8s/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/k8s/apps/kube-system/cilium/app/helmrelease.yaml
@@ -55,7 +55,7 @@ spec:
         ingress:
           enabled: true
           className: internal
-          hosts: ["hubble.${SECRET_DOMAIN}"]
+          hosts: ["hubble.${SECRET_HOME_DOMAIN}"]
     operator:
       prometheus:
         enabled: true
