--- a/k8s/apps/network/cloudflared/app/configs/config.yaml
+++ b/k8s/apps/network/cloudflared/app/configs/config.yaml
@@ -1,8 +1,8 @@
 originRequest:
-  originServerName: "external.${SECRET_DOMAIN}"
+  originServerName: "external.${SECRET_HOME_DOMAIN}"
 ingress:
-  - hostname: "${SECRET_DOMAIN}"
+  - hostname: "${SECRET_HOME_DOMAIN}"
     service: https://nginx-external-controller.network.svc.cluster.local:443
-  - hostname: "*.${SECRET_DOMAIN}"
+  - hostname: "*.${SECRET_HOME_DOMAIN}"
     service: https://nginx-external-controller.network.svc.cluster.local:443
   - service: http_status:404
