--- a/k8s/apps/network/cloudflared/app/dnsendpoint.yaml
+++ b/k8s/apps/network/cloudflared/app/dnsendpoint.yaml
@@ -4,6 +4,9 @@ metadata:
   name: cloudflared
 spec:
   endpoints:
-    - dnsName: "external.${SECRET_DOMAIN}"
+    - dnsName: "external.${SECRET_HOME_DOMAIN}"
       recordType: CNAME
       targets: ["${SECRET_CLOUDFLARE_TUNNEL_ID}.cfargotunnel.com"]
+    - dnsName: "external.${SECRET_DEV_DOMAIN}"
+      recordType: CNAME
+      targets: ["external.${SECRET_HOME_DOMAIN}"]
