--- a/k8s/apps/network/external-dns/cloudflare/helmrelease.yaml
+++ b/k8s/apps/network/external-dns/cloudflare/helmrelease.yaml
@@ -49,7 +49,7 @@ spec:
     sources: ["crd", "ingress"]
     txtPrefix: k8s.
     txtOwnerId: default
-    domainFilters: ["${SECRET_DOMAIN}"]
+    domainFilters: ["${SECRET_HOME_DOMAIN}"]
     serviceMonitor:
       enabled: true
     podAnnotations:
