--- a/k8s/apps/network/nginx/external/helmrelease.yaml
+++ b/k8s/apps/network/nginx/external/helmrelease.yaml
@@ -32,7 +32,7 @@ spec:
     controller:
       service:
         annotations:
-          external-dns.alpha.kubernetes.io/hostname: "external.${SECRET_DOMAIN}"
+          external-dns.alpha.kubernetes.io/hostname: "external.${SECRET_DEV_DOMAIN}"
           lbipam.cilium.io/ips: "192.168.68.203"
         externalTrafficPolicy: Cluster
       ingressClassResource:
@@ -50,8 +50,6 @@ spec:
         client-body-buffer-size: 100M
         client-body-timeout: 120
         client-header-timeout: 120
-        disable-ipv6: "true"
-        disable-ipv6-dns: "true"
         enable-brotli: "true"
         enable-ocsp: "true"
         enable-real-ip: "true"
@@ -62,11 +60,12 @@ spec:
         keep-alive: 120
         log-format-escape-json: "true"
         log-format-upstream: >
-          {"time": "$time_iso8601", "remote_addr": "$proxy_protocol_addr", "x_forwarded_for": "$proxy_add_x_forwarded_for", "request_id": "$req_id", "remote_user": "$remote_user", "bytes_sent": $bytes_sent, "request_time": $request_time, "status": $status, "vhost": "$host", "request_proto": "$server_protocol", "path": "$uri", "request_query": "$args", "request_length": $request_length, "duration": $request_time, "method": "$request_method", "http_referrer": "$http_referer", "http_user_agent": "$http_user_agent"}
+          {"time": "$time_iso8601", "remote_addr": "$proxy_protocol_addr", "x_forwarded_for": "$proxy_add_x_forwarded_for", "request_id": "$req_id", "remote_user": "$remote_user", "bytes_sent": $bytes_sent, "request_time": $request_time, "status": $status, "vhost": "$host", "request_proto": "$server_protocol", "path": "$uri", "request_query": "$args", "request_length": $request_length, "duration": $request_time, "method": "$request_method", "http_referrer": "$http_referer", "http_user_agent": "$http_user_agent", "country_code": "$geoip2_city_country_code", "country_name": "$geoip2_city_country_name"}
 
         proxy-body-size: 0
         proxy-buffer-size: 16k
         ssl-protocols: TLSv1.3 TLSv1.2
+        use-geoip2: true
         use-forwarded-headers: "true"
       metrics:
         enabled: true
@@ -75,11 +74,9 @@ spec:
           namespaceSelector:
             any: true
       extraArgs:
-        default-ssl-certificate: "network/${SECRET_DOMAIN/./-}-tls"
+        default-ssl-certificate: "network/${SECRET_HOME_DOMAIN/./-}-tls"
       terminationGracePeriodSeconds: 120
       resources:
-        # requests:
-        #   cpu: 100m
         requests:
           cpu: 10m
           memory: 10Mi
