--- a/k8s/apps/network/nginx/ks.yaml
+++ b/k8s/apps/network/nginx/ks.yaml
@@ -11,6 +11,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: external-secrets-stores
+    - name: certificates-export
   path: ./k8s/apps/network/nginx/certificates
   prune: false
   sourceRef:
