--- a/k8s/apps/network/nginx/external/helmrelease.yaml
+++ b/k8s/apps/network/nginx/external/helmrelease.yaml
@@ -32,7 +32,7 @@ spec:
     controller:
       service:
         annotations:
-          external-dns.alpha.kubernetes.io/hostname: "external.${SECRET_DEV_DOMAIN}"
+          external-dns.alpha.kubernetes.io/hostname: "external.${SECRET_HOME_DOMAIN}"
           lbipam.cilium.io/ips: "192.168.68.203"
         externalTrafficPolicy: Cluster
       ingressClassResource:
