--- a/k8s/apps/database/valkey/app/helmrelease.yaml
+++ b/k8s/apps/database/valkey/app/helmrelease.yaml
@@ -2,16 +2,16 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: redis
+  name: valkey
 spec:
   interval: 30m
   chart:
     spec:
-      chart: redis-operator
-      version: 0.18.4
+      chart: valkey-operator
+      version: v0.0.38-chart
       sourceRef:
         kind: HelmRepository
-        name: redis
+        name: valkey
         namespace: flux-system
   install:
     remediation:
@@ -22,5 +22,4 @@ spec:
       strategy: rollback
       retries: 3
   values:
-    resources: {}
-    issuer: {}
+    resource: {}
