--- a/k8s/apps/default/unpackerr/app/kustomization.yaml
+++ b/k8s/apps/default/unpackerr/app/kustomization.yaml
@@ -2,9 +2,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  # Pre Flux-Kustomizations
-  - ./namespace.yaml
-  # Flux-Kustomizations
-  - ./cloudnative-pg/ks.yaml
-  - ./valkey/ks.yaml
-  # - ./druid/ks.yaml
+  - ./externalsecret.yaml
+  - ./helmrelease.yaml
