--- a/k8s/flux/repositories/helm/valkey.yaml
+++ b/k8s/flux/repositories/helm/valkey.yaml
@@ -1,8 +1,9 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: redis
+  name: valkey
   namespace: flux-system
 spec:
-  interval: 1h
-  url: https://ot-container-kit.github.io/helm-charts/
+  type: oci
+  interval: 5m
+  url: oci://ghcr.io/hyperspike/valkey-operator
