--- a/k8s/apps/default/cross-seed/app/helmrelease.yaml
+++ b/k8s/apps/default/cross-seed/app/helmrelease.yaml
@@ -85,7 +85,6 @@ spec:
       media:
         type: nfs
         server: 192.168.68.10
-        path: /mnt/nfs/torrents/
+        path: /mnt/nfs/
         globalMounts:
-          - path: /media/torrents
-            subPath: torrents
+          - path: /data
