--- a/k8s/apps/default/qbittorrent/app/kustomization.yaml
+++ b/k8s/apps/default/qbittorrent/app/kustomization.yaml
@@ -5,3 +5,17 @@ resources:
   - ./pvc.yaml
   - ./helmrelease.yaml
   - ../../../../templates/volsync
+configMapGenerator:
+  - name: qbittorrent-loki-rules
+    files:
+      - qbittorrent.yaml=./resources/lokirule.yaml
+    options:
+      labels:
+        loki_rule: "true"
+  - name: qbittorrent-scripts
+    files:
+      - post-process.sh=./resources/post-process.sh
+generatorOptions:
+  disableNameSuffixHash: true
+  annotations:
+    kustomize.toolkit.fluxcd.io/substitute: disabled
