feat: add miniflux to ks

--- a/k8s/apps/default/kustomization.yaml
+++ b/k8s/apps/default/kustomization.yaml
@@ -25,5 +25,6 @@ resources:
   - ./jellyfin/ks.yaml
   - ./jellyseerr/ks.yaml
   - ./filebrowser/ks.yaml
+  - ./miniflux/ks.yaml
   - ./emailer/ks.yaml
   # - ./immich/ks.yaml
