--- a/k8s/apps/default/unpackerr/app/helmrelease.yaml
+++ b/k8s/apps/default/unpackerr/app/helmrelease.yaml
@@ -37,9 +37,9 @@ spec:
               UN_WEBSERVER_LOG_FILE: /logs/webserver.log
               UN_ACTIVITY: true
               UN_SONARR_0_URL: http://sonarr.default.svc.cluster.local
-              UN_SONARR_0_PATHS_0: /mnt/nfs/torrents/complete/sonarr
+              UN_SONARR_0_PATHS_0: /data/torrents/complete/movies
               UN_RADARR_0_URL: http://radarr.default.svc.cluster.local
-              UN_RADARR_0_PATHS_0: /mnt/nfs/torrents/complete/radarr
+              UN_RADARR_0_PATHS_0: /data/torrents/complete/tv
             envFrom:
               - secretRef:
                   name: unpackerr-secret
@@ -89,5 +89,4 @@ spec:
         server: 192.168.68.10
         path: /mnt/nfs
         globalMounts:
-          - path: /media/torrents
-            subPath: torrents
+          - path: /data
