fix: remove tls

--- a/k8s/apps/database/valkey/cluster/cluster.yaml
+++ b/k8s/apps/database/valkey/cluster/cluster.yaml
@@ -1,11 +1,10 @@
 apiVersion: hyperspike.io/v1
 kind: Valkey
 metadata:
-  name: valkey-cluster
+  name: cluster
 spec:
   clusterDomain: valkey.${SECRET_HOME_DOMAIN}"
   nodes: 1
   prometheus: true
   replicas: 1
   volumePermissions: true
-  tls: true
