--- a/k8s/apps/database/redis/app/helmrelease.yaml
+++ b/k8s/apps/database/redis/app/helmrelease.yaml
@@ -7,11 +7,11 @@ spec:
   interval: 30m
   chart:
     spec:
-      chart: valkey-operator
-      version: v0.0.38-chart
+      chart: redis-operator
+      version: 0.18.1
       sourceRef:
         kind: HelmRepository
-        name: valkey
+        name: redis
         namespace: flux-system
   install:
     remediation:
@@ -22,4 +22,4 @@ spec:
       strategy: rollback
       retries: 3
   values:
-    resource: {}
+    resources: {}
