--- a/k8s/flux/repositories/helm/redis.yaml
+++ b/k8s/flux/repositories/helm/redis.yaml
@@ -1,9 +1,8 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: valkey
+  name: redis
   namespace: flux-system
 spec:
-  type: oci
   interval: 5m
-  url: oci://ghcr.io/hyperspike
+  url: https://ot-container-kit.github.io/helm-charts
