--- a/k8s/apps/default/bazarr/app/kustomization.yaml
+++ b/k8s/apps/default/bazarr/app/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 resources:
   - ./pvc.yaml
   - ./helmrelease.yaml
+  - ../../../../templates/gatus/guarded
   - ../../../../templates/volsync
 configMapGenerator:
   - name: bazarr-scripts
