--- a/k8s/apps/default/komga/app/helmrelease.yaml
+++ b/k8s/apps/default/komga/app/helmrelease.yaml
@@ -37,6 +37,19 @@ spec:
             env:
               CONFIG_PATH: /config
               PORT: &port 25600
+            probes:
+              liveness: &probes
+                enabled: true
+                custom: true
+                spec:
+                  httpGet:
+                    path: /actuator/health
+                    port: *port
+                  initialDelaySeconds: 0
+                  periodSeconds: 10
+                  timeoutSeconds: 1
+                  failureThreshold: 3
+              readiness: *probes
     service:
       app:
         controller: komga
