--- a/k8s/apps/default/filebrowser/app/helmrelease.yaml
+++ b/k8s/apps/default/filebrowser/app/helmrelease.yaml
@@ -37,6 +37,19 @@ spec:
               FB_ROOT: /data
               FB_LOG: stdout
               FB_NOAUTH: true
+            probes:
+              liveness: &probes
+                enabled: true
+                custom: true
+                spec:
+                  httpGet:
+                    path: /health
+                    port: &port 80
+                  initialDelaySeconds: 0
+                  periodSeconds: 10
+                  timeoutSeconds: 1
+                  failureThreshold: 3
+              readiness: *probes
             securityContext:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
