--- a/k8s/apps/default/jellyfin/app/helmrelease.yaml
+++ b/k8s/apps/default/jellyfin/app/helmrelease.yaml
@@ -38,13 +38,44 @@ spec:
             image:
               repository: jellyfin/jellyfin
               tag: 2024110405@sha256:ff112e2e28b66ef2ce8ee7228f6457b37313cb7e7f09358e90f2f13873e2cf31
+            env:
+              JELLYFIN_DATA_DIR: /media
+              JELLYFIN_CONFIG_DIR: /config
+              JELLYFIN_CACHE_DIR: /config/cache
+              JELLYFIN_LOG_DIR: /config/logs
+            probes:
+              liveness: &probes
+                enabled: true
+                custom: true
+                spec:
+                  httpGet:
+                    path: /identity
+                    port: 32400
+                  initialDelaySeconds: 0
+                  periodSeconds: 10
+                  timeoutSeconds: 1
+                  failureThreshold: 3
+              readiness: *probes
+              startup:
+                enabled: true
+                spec:
+                  failureThreshold: 30
+                  periodSeconds: 10
             resources:
               requests:
-                memory: 256Mi
+                cpu: 10m
               limits:
                 gpu.intel.com/i915: 1
                 memory: 16Gi
     defaultPodOptions:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 568
+        runAsGroup: 568
+        fsGroup: 568
+        fsGroupChangePolicy: OnRootMismatch
+        supplementalGroups: [44, 10000]
+        seccompProfile: {type: RuntimeDefault}
       nodeSelector:
         intel.feature.node.kubernetes.io/gpu: "true"
     service:
@@ -71,6 +102,8 @@ spec:
     persistence:
       config:
         existingClaim: jellyfin
+        globalMounts:
+          - path: /config
       cache:
         existingClaim: jellyfin-cache
         globalMounts:
