--- a/k8s/apps/default/radarr/app/kustomization.yaml
+++ b/k8s/apps/default/radarr/app/kustomization.yaml
@@ -5,3 +5,12 @@ resources:
   - ./externalsecret.yaml
   - ./pvc.yaml
   - ./helmrelease.yaml
+  - ../../../../templates/gatus/guarded
+configMapGenerator:
+  - name: radarr-configmap
+    files:
+      - pushover-notify.sh=./resources/pushover-notify.sh
+generatorOptions:
+  disableNameSuffixHash: true
+  annotations:
+    kustomize.toolkit.fluxcd.io/substitute: disabled
