--- a/k8s/apps/default/sonarr/app/helmrelease.yaml
+++ b/k8s/apps/default/sonarr/app/helmrelease.yaml
@@ -53,6 +53,19 @@ spec:
               SONARR__UPDATE__BRANCH: develop
               TZ: "Australia/Sydney"
             envFrom: *envFrom
+            probes:
+              liveness: &probes
+                enabled: true
+                custom: true
+                spec:
+                  httpGet:
+                    path: /ping
+                    port: *port
+                  initialDelaySeconds: 0
+                  periodSeconds: 10
+                  timeoutSeconds: 1
+                  failureThreshold: 3
+              readiness: *probes
             securityContext:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
@@ -92,6 +105,17 @@ spec:
     persistence:
       config:
         existingClaim: sonarr
+      scripts:
+        type: configMap
+        name: sonarr-configmap
+        defaultMode: 0775
+        globalMounts:
+          - path: /scripts/pushover-notify.sh
+            subPath: pushover-notify.sh
+            readOnly: true
+          - path: /scripts/refresh-series.sh
+            subPath: refresh-series.sh
+            readOnly: true
       tmp:
         type: emptyDir
       media:
