--- a/k8s/apps/observability/kustomization.yaml
+++ b/k8s/apps/observability/kustomization.yaml
@@ -7,3 +7,6 @@ resources:
   - ./loki/ks.yaml
   - ./promtail/ks.yaml
   - ./grafana/ks.yaml
+  - ./gatus/ks.yaml
+  - ./blackbox-exporter/ks.yaml
+  - ./smartctl-exporter/ks.yaml
