--- a/k8s/apps/volsync-system/volsync/app/helmrelease.yaml
+++ b/k8s/apps/volsync-system/volsync/app/helmrelease.yaml
@@ -22,6 +22,8 @@ spec:
       strategy: rollback
       retries: 3
   dependsOn:
+    - name: kyverno
+      namespace: kyverno
     - name: snapshot-controller
       namespace: volsync-system
   values:
@@ -32,3 +34,8 @@ spec:
     manageCRDs: true
     metrics:
       disableAuth: true
+    podSecurityContext:
+      runAsNonRoot: true
+      runAsUser: 65534
+      runAsGroup: 65534
+      seccompProfile: {type: RuntimeDefault}
