--- a/k8s/apps/database/redis/ks.yaml
+++ b/k8s/apps/database/redis/ks.yaml
@@ -32,7 +32,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: valkey
+    - name: redis
   path: ./k8s/apps/database/redis/cluster
   prune: true
   sourceRef:
