--- a/k8s/apps/default/immich/ks.yaml
+++ b/k8s/apps/default/immich/ks.yaml
@@ -9,6 +9,9 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  dependsOn:
+    - name: external-secrets-stores
+    - name: nfs-csi-driver
   path: ./k8s/apps/default/immich/app
   prune: true
   sourceRef:
