fix: controller name

--- a/k8s/apps/default/immich/app/helmrelease.yaml
+++ b/k8s/apps/default/immich/app/helmrelease.yaml
@@ -30,7 +30,7 @@ spec:
       namespace: volsync-system
   values:
     controllers:
-      jellyfin:
+      immich:
         annotations:
           reloader.stakater.com/auto: "true"
         initContainers:
