fix: use init-db-extensions

--- a/k8s/apps/default/immich/app/helmrelease.yaml
+++ b/k8s/apps/default/immich/app/helmrelease.yaml
@@ -41,6 +41,16 @@ spec:
             envFrom: &envFrom
               - secretRef:
                   name: immich-secret
+          init-db-extensions:
+            image:
+              repository: ghcr.io/onedr0p/postgres-init
+              tag: 16
+            command: ["/bin/sh", "-c"]
+            args:
+              - /scripts/create_extensions.sh
+            envFrom: &envFrom
+              - secretRef:
+                  name: immich-secret
         containers:
           app:
             image:
