--- a/k8s/apps/default/immich/ks.yaml
+++ b/k8s/apps/default/immich/ks.yaml
@@ -11,6 +11,8 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: external-secrets-stores
+    - name: cloudnative-pg-cluster
+    - name: redis-cluster
   path: ./k8s/apps/default/immich/app
   prune: true
   sourceRef:
