--- a/k8s/apps/database/cloudnative-pg/cluster/cluster16.yaml
+++ b/k8s/apps/database/cloudnative-pg/cluster/cluster16.yaml
@@ -53,13 +53,10 @@ spec:
   # NOTE: previousCluster needs to be set to the name of the previous
   # cluster when recovering from an existing cnpg cluster
   bootstrap:
-    initdb:
-      # NOTE: Set initdb and comment out recovery when no backup (the very first bootstrap)!
-      #   database: postgres16-v0
-      #   owner: postgres
-      postInitSQL:
-        - ALTER SYSTEM SET search_path TO "$user", public, vectors;
-        - CREATE EXTENSION IF NOT EXISTS "vectors";
+    # NOTE: Set initdb and comment out recovery when no backup (the very first bootstrap)!
+    # initdb:
+    #   database: postgres16-v0
+    #   owner: postgres
     recovery:
       source: &previousCluster postgres16-v1
   # NOTE: externalClusters is needed when recovering from an EXISTING cnpg cluster
